<resources>
    <string name="app_name">Gestion Barrial</string>
    <string name="landing_comenzar">Comenzar</string>
    <string name="landing_welcome">Bienvenido a SGB</string>
    <string name="boton_promociones_y_servicios">Ver promociones y servicios de vecinos</string>
    <string name="landing_page_image_description">landing page image</string>
    <string name="file_prefs">com.gestionbarrial.prefs</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_promociones_servicios">PromocionesServiciosActivity</string>
    <string name="ingresar">Ingresar</string>l
    <string name="registrarse">Registrarse</string>
    <string name="soy_inspector">Soy inspector</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="hola_vecino">Hola vecino!</string>
    <string name="registrarse_title">Registrarse</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="dni">DNI</string>
    <string name="apellido">Apellido</string>
    <string name="direcci_n">Dirección</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="mensaje_registro">Luego de enviada la solicitud, la información va a ser verificada y será notificado por mail el resultado para poder ingresar a la apliciación</string>
    <string name="mensaje_olvide_login">Olvidé mi contraseña</string>
    <string name="hola_inspector">Hola inspector!</string>
    <string name="soy_vecino">Soy vecino</string>
    <string name="legajo">Legajo</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="mis_reclamos">Mis reclamos</string>
    <string name="reclamos_del_municipio">Reclamos del municipio</string>
    <string name="crear_nuevo_reclamo">Crear nuevo reclamo</string>
    <string name="mis_denuncias">Mis denuncias</string>
    <string name="crear_nueva_denuncia">Crear nueva denuncia</string>
    <string name="denuncias_recibidas">Denuncias recibidas</string>
    <string name="crear_nueva_promocion_o_servicio">Crear nueva promoción o servicio</string>
    <string name="mis_promociones_y_servicios">Mis promociones o servicios</string>
    <string name="promociones_y_servicios_de_vecinos">Promociones o servicios de vecinos</string>
    <string name="buscar">Buscar</string>
    <string name="icon">Icon</string>
    <string name="titulo_denuncia_card">Denuncia #%1$s</string>
    <string name="titulo_notificacion_card">%1$s #%2$s</string>
    <string name="inicio">Inicio</string>
    <string name="vecinos">Vecinos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_reclamo">Nuevo reclamo</string>
    <string name="establecer_ubicacion">Establecer ubicación</string>
    <string name="anadir_fotos_videos_o_notas_de_voz">Añadir fotos, videos o notas de voz</string>
    <string name="seleccionar_categoria">Seleccionar categoría</string>
    <string name="ingresar_una_descripcion">Ingresar una descripción</string>
    <string name="indicar_vecino_o_comercio_a_denunciar_opcional">Indicar vecino o comercio a denunciar (opcional)</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="back_button">back button</string>
    <string name="location_icon">location icon</string>
    <string name="a_adir_fotos_max_7">Añadir fotos (max 7)</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="ultima_modificacion">Ultima modificación:</string>
    <string name="estado">Estado:</string>
    <string name="nuevo_servicio">Nuevo servicio</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string-array name="categorias_promos">
        <item>Desayunos</item>
        <item>Menú del día</item>
        <item>Panadería</item>
        <item>Pizzas</item>
        <item>Postres</item>
        <item>Venta</item>
        <item>Albañilería</item>
        <item>Electricidad</item>
        <item>Cerrajería</item>
        <item>Pintura</item>
        <item>Gasfitería</item>
        <item>Comidas</item>
        <item>A/A</item>
        <item>Arquitecto</item>
        <item>Autos</item>
        <item>Belleza</item>
        <item>Bienestar</item>
        <item>Carpintería</item>
        <item>Colocador</item>
        <item>Control de plagas</item>
        <item>Colocador</item>
        <item>Control de plagas</item>
        <item>Cuidadores</item>
    </string-array>
    <string-array name="categorias_reclamos_municipio">
        <item>Alumbrado público</item>
        <item>Arbolado, Higiene, Plazas y Paseos</item>
        <item>Comedores Escolares</item>
        <item>Camping Municipal</item>
        <item>Obras Públicas</item>
        <item>Obras particulares</item>
        <item>Redes - vía pública</item>
        <item>Salud Pública</item>
        <item>Semáforos y señalamiento vial</item>
        <item>Tránsito y calles</item>
    </string-array>
</resources>