<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu.MenuActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/bienvenido"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="335dp"
        android:layout_height="486dp"
        android:layout_marginBottom="50dp"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/boton_reclamos_municipio"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/reclamos_del_municipio"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_mis_reclamos"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/mis_reclamos"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_crear_nuevo_reclamo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/crear_nuevo_reclamo"
                android:textStyle="bold" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/boton_mis_denuncias"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/mis_denuncias"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_crear_nueva_denuncia"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/crear_nueva_denuncia"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_denuncias_recibidas"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/denuncias_recibidas"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/boton_promo_serv_vecinos"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/promociones_y_servicios_de_vecinos"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_nueva_promo_serv"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/crear_nueva_promocion_o_servicio"
                android:textStyle="bold" />

            <Button
                android:id="@+id/boton_mis_promos_serv"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/mis_promociones_y_servicios"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>