<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.reclamos.NuevoReclamoActivity">

    <ImageButton
        android:id="@+id/boton_back2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="14dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <View
        android:id="@+id/splitLine_hor5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/nueva_denuncia_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/splitLine_hor6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/nueva_denuncia_agregar_fotos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/splitLine_hor7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/nueva_denuncia_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="48dp"
        android:text="@string/nuevo_reclamo"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nueva_denuncia_ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nueva_denuncia_ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="28dp"
        android:text="@string/establecer_ubicacion"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nueva_denuncia_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="24dp"
        android:text="@string/seleccionar_categoria"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor6"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nueva_denuncia_agregar_fotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/a_adir_fotos_max_7"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nueva_denuncia_descripcion"
        android:layout_width="282dp"
        android:layout_height="68dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="122dp"
        android:text="@string/ingresar_una_descripcion"
        app:layout_constraintBottom_toTopOf="@+id/boton_guardar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/boton_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toEndOf="@+id/boton_enviar" />

    <Button
        android:id="@+id/boton_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/boton_guardar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor5"
        app:layout_constraintEnd_toStartOf="@+id/nueva_denuncia_ubicacion"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_ubicacion"
        android:contentDescription="@string/location_icon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor6"
        app:layout_constraintEnd_toStartOf="@+id/nueva_denuncia_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_categoria" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/splitLine_hor7"
        app:layout_constraintEnd_toStartOf="@+id/nueva_denuncia_agregar_fotos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_add_photo" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="142dp"
        app:layout_constraintBottom_toTopOf="@+id/boton_enviar"
        app:layout_constraintEnd_toStartOf="@+id/nueva_denuncia_descripcion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_descripcion" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_height="100dp"
        android:layout_width="match_parent">

    <!-- Bottom sheet contents. -->

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>